jsp-parser/target/generated-sources/antlr4/com/cybernostics/jsp/parser/JSPParser.java
// Generated from com\cybernostics\jsp\parser\JSPParser.g4 by ANTLR 4.0
package com.cybernostics.jsp.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSPParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		JSP_CONDITIONAL_COMMENT_START=5, JSP_COMMENT_START=1, DOUBLE_QUOTE=21, 
		DIRECTIVE_END=43, EXPRESSION_OPEN=19, WHITESPACES=20, SCRIPTLET_OPEN=18, 
		DIRECTIVE_BEGIN=15, DTD_QUOTED=36, ECHO_EXPRESSION_OPEN=17, TAG_SLASH=42, 
		EL_EXPR=51, STYLE_SHORT_BODY=49, JSP_CONDITIONAL_COMMENT=31, JSP_CONDITIONAL_COMMENT_END_TAG=7, 
		JSP_STATIC_CONTENT_CHARS=27, BLOB_CONTENT=39, DTD_WHITESPACE_SKIP=35, 
		TAG_IDENTIFIER=44, ATTVAL_ATTRIBUTE=50, JSPEXPR_CONTENT_CLOSE=40, DTD=10, 
		SCRIPT_BODY=46, CDATA=9, JSP_CONDITIONAL_COMMENT_START_TAG=6, BLOB_CLOSE=38, 
		QUOTE=23, SCRIPT_SHORT_BODY=47, JSP_STATIC_CONTENT_CHAR=28, JSP_COMMENT_END_TAG=4, 
		XML_DECLARATION=8, JSP_COMMENT_TEXT=32, DTD_PUBLIC=33, CLOSE_TAG_BEGIN=13, 
		JSP_STATIC_CONTENT_CHARS_MIXED=26, JSP_COMMENT_END=2, JSP_COMMENT_START_TAG=3, 
		TAG_BEGIN=14, JSP_CONDITIONAL_COMMENT_END=30, TAG_SLASH_END=41, JSP_END=29, 
		EQUALS=25, SINGLE_QUOTE=22, STYLE_BODY=48, DECLARATION_BEGIN=16, DTD_START=11, 
		TAG_WHITESPACE=45, WHITESPACE_SKIP=12, DTD_IDENTIFIER=37, TAG_END=24, 
		DTD_SYSTEM=34;
	public static final String[] tokenNames = {
		"<INVALID>", "JSP_COMMENT_START", "JSP_COMMENT_END", "'<!--'", "'-->'", 
		"JSP_CONDITIONAL_COMMENT_START", "'<!['", "']>'", "'<?xml'", "CDATA", 
		"DTD", "'<!DOCTYPE'", "WHITESPACE_SKIP", "CLOSE_TAG_BEGIN", "TAG_BEGIN", 
		"DIRECTIVE_BEGIN", "DECLARATION_BEGIN", "ECHO_EXPRESSION_OPEN", "SCRIPTLET_OPEN", 
		"EXPRESSION_OPEN", "WHITESPACES", "'\"'", "'''", "QUOTE", "TAG_END", "EQUALS", 
		"JSP_STATIC_CONTENT_CHARS_MIXED", "JSP_STATIC_CONTENT_CHARS", "JSP_STATIC_CONTENT_CHAR", 
		"'%>'", "JSP_CONDITIONAL_COMMENT_END", "JSP_CONDITIONAL_COMMENT", "JSP_COMMENT_TEXT", 
		"'PUBLIC'", "'SYSTEM'", "DTD_WHITESPACE_SKIP", "DTD_QUOTED", "DTD_IDENTIFIER", 
		"BLOB_CLOSE", "BLOB_CONTENT", "JSPEXPR_CONTENT_CLOSE", "TAG_SLASH_END", 
		"'/'", "DIRECTIVE_END", "TAG_IDENTIFIER", "TAG_WHITESPACE", "SCRIPT_BODY", 
		"SCRIPT_SHORT_BODY", "STYLE_BODY", "STYLE_SHORT_BODY", "ATTVAL_ATTRIBUTE", 
		"EL_EXPR"
	};
	public static final int
		RULE_jspDocument = 0, RULE_jspElements = 1, RULE_jspElement = 2, RULE_jspDirective = 3, 
		RULE_htmlContent = 4, RULE_jspExpression = 5, RULE_htmlAttribute = 6, 
		RULE_htmlAttributeName = 7, RULE_htmlAttributeValue = 8, RULE_htmlAttributeValueExpr = 9, 
		RULE_htmlAttributeValueConstant = 10, RULE_htmlTagName = 11, RULE_htmlChardata = 12, 
		RULE_htmlMisc = 13, RULE_htmlComment = 14, RULE_htmlCommentText = 15, 
		RULE_htmlConditionalCommentText = 16, RULE_xhtmlCDATA = 17, RULE_dtd = 18, 
		RULE_dtdElementName = 19, RULE_publicId = 20, RULE_systemId = 21, RULE_xml = 22, 
		RULE_scriptlet = 23;
	public static final String[] ruleNames = {
		"jspDocument", "jspElements", "jspElement", "jspDirective", "htmlContent", 
		"jspExpression", "htmlAttribute", "htmlAttributeName", "htmlAttributeValue", 
		"htmlAttributeValueExpr", "htmlAttributeValueConstant", "htmlTagName", 
		"htmlChardata", "htmlMisc", "htmlComment", "htmlCommentText", "htmlConditionalCommentText", 
		"xhtmlCDATA", "dtd", "dtdElementName", "publicId", "systemId", "xml", 
		"scriptlet"
	};

	@Override
	public String getGrammarFileName() { return "JSPParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class JspDocumentContext extends ParserRuleContext {
		public JspElementsContext jspElements(int i) {
			return getRuleContext(JspElementsContext.class,i);
		}
		public DtdContext dtd() {
			return getRuleContext(DtdContext.class,0);
		}
		public List<JspElementsContext> jspElements() {
			return getRuleContexts(JspElementsContext.class);
		}
		public List<JspDirectiveContext> jspDirective() {
			return getRuleContexts(JspDirectiveContext.class);
		}
		public List<ScriptletContext> scriptlet() {
			return getRuleContexts(ScriptletContext.class);
		}
		public XmlContext xml() {
			return getRuleContext(XmlContext.class,0);
		}
		public JspDirectiveContext jspDirective(int i) {
			return getRuleContext(JspDirectiveContext.class,i);
		}
		public ScriptletContext scriptlet(int i) {
			return getRuleContext(ScriptletContext.class,i);
		}
		public List<TerminalNode> WHITESPACES() { return getTokens(JSPParser.WHITESPACES); }
		public TerminalNode WHITESPACES(int i) {
			return getToken(JSPParser.WHITESPACES, i);
		}
		public JspDocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jspDocument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterJspDocument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitJspDocument(this);
		}
	}

	public final JspDocumentContext jspDocument() throws RecognitionException {
		JspDocumentContext _localctx = new JspDocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_jspDocument);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					setState(51);
					switch (_input.LA(1)) {
					case DIRECTIVE_BEGIN:
						{
						setState(48); jspDirective();
						}
						break;
					case SCRIPTLET_OPEN:
						{
						setState(49); scriptlet();
						}
						break;
					case WHITESPACES:
						{
						setState(50); match(WHITESPACES);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(55);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(57);
			_la = _input.LA(1);
			if (_la==XML_DECLARATION) {
				{
				setState(56); xml();
				}
			}

			setState(64);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					setState(62);
					switch (_input.LA(1)) {
					case DIRECTIVE_BEGIN:
						{
						setState(59); jspDirective();
						}
						break;
					case SCRIPTLET_OPEN:
						{
						setState(60); scriptlet();
						}
						break;
					case WHITESPACES:
						{
						setState(61); match(WHITESPACES);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(68);
			_la = _input.LA(1);
			if (_la==DTD) {
				{
				setState(67); dtd();
				}
			}

			setState(75);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					setState(73);
					switch (_input.LA(1)) {
					case DIRECTIVE_BEGIN:
						{
						setState(70); jspDirective();
						}
						break;
					case SCRIPTLET_OPEN:
						{
						setState(71); scriptlet();
						}
						break;
					case WHITESPACES:
						{
						setState(72); match(WHITESPACES);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << JSP_COMMENT_START) | (1L << JSP_CONDITIONAL_COMMENT_START) | (1L << TAG_BEGIN) | (1L << DIRECTIVE_BEGIN) | (1L << SCRIPTLET_OPEN) | (1L << WHITESPACES) | (1L << JSP_STATIC_CONTENT_CHARS_MIXED) | (1L << JSP_STATIC_CONTENT_CHARS) | (1L << EL_EXPR))) != 0)) {
				{
				{
				setState(78); jspElements();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JspElementsContext extends ParserRuleContext {
		public JspElementContext jspElement() {
			return getRuleContext(JspElementContext.class,0);
		}
		public HtmlMiscContext htmlMisc(int i) {
			return getRuleContext(HtmlMiscContext.class,i);
		}
		public List<HtmlMiscContext> htmlMisc() {
			return getRuleContexts(HtmlMiscContext.class);
		}
		public JspDirectiveContext jspDirective() {
			return getRuleContext(JspDirectiveContext.class,0);
		}
		public ScriptletContext scriptlet() {
			return getRuleContext(ScriptletContext.class,0);
		}
		public JspElementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jspElements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterJspElements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitJspElements(this);
		}
	}

	public final JspElementsContext jspElements() throws RecognitionException {
		JspElementsContext _localctx = new JspElementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_jspElements);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(84); htmlMisc();
					}
					} 
				}
				setState(89);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(93);
			switch (_input.LA(1)) {
			case TAG_BEGIN:
				{
				setState(90); jspElement();
				}
				break;
			case DIRECTIVE_BEGIN:
				{
				setState(91); jspDirective();
				}
				break;
			case SCRIPTLET_OPEN:
				{
				setState(92); scriptlet();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(95); htmlMisc();
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JspElementContext extends ParserRuleContext {
		public HtmlTagNameContext name;
		public HtmlAttributeContext htmlAttribute;
		public List<HtmlAttributeContext> atts = new ArrayList<HtmlAttributeContext>();
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public TerminalNode CLOSE_TAG_BEGIN() { return getToken(JSPParser.CLOSE_TAG_BEGIN, 0); }
		public TerminalNode TAG_END(int i) {
			return getToken(JSPParser.TAG_END, i);
		}
		public List<HtmlTagNameContext> htmlTagName() {
			return getRuleContexts(HtmlTagNameContext.class);
		}
		public HtmlTagNameContext htmlTagName(int i) {
			return getRuleContext(HtmlTagNameContext.class,i);
		}
		public List<TerminalNode> TAG_END() { return getTokens(JSPParser.TAG_END); }
		public TerminalNode TAG_BEGIN() { return getToken(JSPParser.TAG_BEGIN, 0); }
		public HtmlContentContext htmlContent(int i) {
			return getRuleContext(HtmlContentContext.class,i);
		}
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public List<HtmlContentContext> htmlContent() {
			return getRuleContexts(HtmlContentContext.class);
		}
		public TerminalNode TAG_SLASH_END() { return getToken(JSPParser.TAG_SLASH_END, 0); }
		public JspElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jspElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterJspElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitJspElement(this);
		}
	}

	public final JspElementContext jspElement() throws RecognitionException {
		JspElementContext _localctx = new JspElementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_jspElement);
		int _la;
		try {
			setState(140);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(101); match(TAG_BEGIN);
				setState(102); ((JspElementContext)_localctx).name = htmlTagName();
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TAG_BEGIN) | (1L << SCRIPTLET_OPEN) | (1L << TAG_IDENTIFIER))) != 0)) {
					{
					{
					setState(103); ((JspElementContext)_localctx).htmlAttribute = htmlAttribute();
					((JspElementContext)_localctx).atts.add(((JspElementContext)_localctx).htmlAttribute);
					}
					}
					setState(108);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(109); match(TAG_END);
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << JSP_COMMENT_START) | (1L << JSP_CONDITIONAL_COMMENT_START) | (1L << CDATA) | (1L << TAG_BEGIN) | (1L << DIRECTIVE_BEGIN) | (1L << SCRIPTLET_OPEN) | (1L << WHITESPACES) | (1L << JSP_STATIC_CONTENT_CHARS_MIXED) | (1L << JSP_STATIC_CONTENT_CHARS) | (1L << EL_EXPR))) != 0)) {
					{
					{
					setState(110); htmlContent();
					}
					}
					setState(115);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(116); match(CLOSE_TAG_BEGIN);
				setState(117); htmlTagName();
				setState(118); match(TAG_END);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(120); match(TAG_BEGIN);
				setState(121); ((JspElementContext)_localctx).name = htmlTagName();
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TAG_BEGIN) | (1L << SCRIPTLET_OPEN) | (1L << TAG_IDENTIFIER))) != 0)) {
					{
					{
					setState(122); ((JspElementContext)_localctx).htmlAttribute = htmlAttribute();
					((JspElementContext)_localctx).atts.add(((JspElementContext)_localctx).htmlAttribute);
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128); match(TAG_SLASH_END);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130); match(TAG_BEGIN);
				setState(131); ((JspElementContext)_localctx).name = htmlTagName();
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TAG_BEGIN) | (1L << SCRIPTLET_OPEN) | (1L << TAG_IDENTIFIER))) != 0)) {
					{
					{
					setState(132); ((JspElementContext)_localctx).htmlAttribute = htmlAttribute();
					((JspElementContext)_localctx).atts.add(((JspElementContext)_localctx).htmlAttribute);
					}
					}
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(138); match(TAG_END);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JspDirectiveContext extends ParserRuleContext {
		public HtmlTagNameContext name;
		public HtmlAttributeContext htmlAttribute;
		public List<HtmlAttributeContext> atts = new ArrayList<HtmlAttributeContext>();
		public TerminalNode DIRECTIVE_BEGIN() { return getToken(JSPParser.DIRECTIVE_BEGIN, 0); }
		public HtmlAttributeContext htmlAttribute(int i) {
			return getRuleContext(HtmlAttributeContext.class,i);
		}
		public TerminalNode DIRECTIVE_END() { return getToken(JSPParser.DIRECTIVE_END, 0); }
		public HtmlTagNameContext htmlTagName() {
			return getRuleContext(HtmlTagNameContext.class,0);
		}
		public List<TerminalNode> TAG_WHITESPACE() { return getTokens(JSPParser.TAG_WHITESPACE); }
		public TerminalNode TAG_WHITESPACE(int i) {
			return getToken(JSPParser.TAG_WHITESPACE, i);
		}
		public List<HtmlAttributeContext> htmlAttribute() {
			return getRuleContexts(HtmlAttributeContext.class);
		}
		public JspDirectiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jspDirective; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterJspDirective(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitJspDirective(this);
		}
	}

	public final JspDirectiveContext jspDirective() throws RecognitionException {
		JspDirectiveContext _localctx = new JspDirectiveContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_jspDirective);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(DIRECTIVE_BEGIN);
			setState(143); ((JspDirectiveContext)_localctx).name = htmlTagName();
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=1 && _alt!=-1 ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(144); ((JspDirectiveContext)_localctx).htmlAttribute = htmlAttribute();
					((JspDirectiveContext)_localctx).atts.add(((JspDirectiveContext)_localctx).htmlAttribute);
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TAG_WHITESPACE) {
				{
				{
				setState(150); match(TAG_WHITESPACE);
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(156); match(DIRECTIVE_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlContentContext extends ParserRuleContext {
		public JspElementContext jspElement() {
			return getRuleContext(JspElementContext.class,0);
		}
		public HtmlCommentContext htmlComment() {
			return getRuleContext(HtmlCommentContext.class,0);
		}
		public JspExpressionContext jspExpression() {
			return getRuleContext(JspExpressionContext.class,0);
		}
		public ScriptletContext scriptlet() {
			return getRuleContext(ScriptletContext.class,0);
		}
		public JspDirectiveContext jspDirective() {
			return getRuleContext(JspDirectiveContext.class,0);
		}
		public HtmlChardataContext htmlChardata() {
			return getRuleContext(HtmlChardataContext.class,0);
		}
		public XhtmlCDATAContext xhtmlCDATA() {
			return getRuleContext(XhtmlCDATAContext.class,0);
		}
		public HtmlContentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlContent; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterHtmlContent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitHtmlContent(this);
		}
	}

	public final HtmlContentContext htmlContent() throws RecognitionException {
		HtmlContentContext _localctx = new HtmlContentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_htmlContent);
		try {
			setState(165);
			switch (_input.LA(1)) {
			case WHITESPACES:
			case JSP_STATIC_CONTENT_CHARS_MIXED:
			case JSP_STATIC_CONTENT_CHARS:
				enterOuterAlt(_localctx, 1);
				{
				setState(158); htmlChardata();
				}
				break;
			case EL_EXPR:
				enterOuterAlt(_localctx, 2);
				{
				setState(159); jspExpression();
				}
				break;
			case TAG_BEGIN:
				enterOuterAlt(_localctx, 3);
				{
				setState(160); jspElement();
				}
				break;
			case CDATA:
				enterOuterAlt(_localctx, 4);
				{
				setState(161); xhtmlCDATA();
				}
				break;
			case JSP_COMMENT_START:
			case JSP_CONDITIONAL_COMMENT_START:
				enterOuterAlt(_localctx, 5);
				{
				setState(162); htmlComment();
				}
				break;
			case SCRIPTLET_OPEN:
				enterOuterAlt(_localctx, 6);
				{
				setState(163); scriptlet();
				}
				break;
			case DIRECTIVE_BEGIN:
				enterOuterAlt(_localctx, 7);
				{
				setState(164); jspDirective();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JspExpressionContext extends ParserRuleContext {
		public TerminalNode EL_EXPR() { return getToken(JSPParser.EL_EXPR, 0); }
		public JspExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jspExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterJspExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitJspExpression(this);
		}
	}

	public final JspExpressionContext jspExpression() throws RecognitionException {
		JspExpressionContext _localctx = new JspExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_jspExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(167); match(EL_EXPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlAttributeContext extends ParserRuleContext {
		public HtmlAttributeNameContext name;
		public HtmlAttributeValueContext value;
		public JspElementContext jspElement() {
			return getRuleContext(JspElementContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(JSPParser.EQUALS, 0); }
		public ScriptletContext scriptlet() {
			return getRuleContext(ScriptletContext.class,0);
		}
		public HtmlAttributeNameContext htmlAttributeName() {
			return getRuleContext(HtmlAttributeNameContext.class,0);
		}
		public HtmlAttributeValueContext htmlAttributeValue() {
			return getRuleContext(HtmlAttributeValueContext.class,0);
		}
		public HtmlAttributeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlAttribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterHtmlAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitHtmlAttribute(this);
		}
	}

	public final HtmlAttributeContext htmlAttribute() throws RecognitionException {
		HtmlAttributeContext _localctx = new HtmlAttributeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_htmlAttribute);
		try {
			setState(176);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(169); jspElement();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(170); ((HtmlAttributeContext)_localctx).name = htmlAttributeName();
				setState(171); match(EQUALS);
				setState(172); ((HtmlAttributeContext)_localctx).value = htmlAttributeValue();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(174); ((HtmlAttributeContext)_localctx).name = htmlAttributeName();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(175); scriptlet();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HtmlAttributeNameContext extends ParserRuleContext {
		public TerminalNode TAG_IDENTIFIER() { return getToken(JSPParser.TAG_IDENTIFIER, 0); }
		public HtmlAttributeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_htmlAttributeName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).enterHtmlAttributeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSPParserListener ) ((JSPParserListener)listener).exitHtmlAttributeName(this);
		}
	}

	public final HtmlAttributeNameContext htmlAttributeName() throws RecognitionException {
		HtmlAttributeNameContext _localctx = new HtmlAttributeNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_htmlAttributeName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); match(TAG_IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
